# open-nba

./: .env.example  .gitignore  .prettierignore  .vercelignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  README.md  package.json  pnpm-lock.yaml  turbo.json  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: branch-name.yml  ci.yml  secret-scan.yml
apps/web/: Dockerfile  eslint.config.mjs  next.config.mjs  next.config.ts  package.json  playwright.config.ts  tailwind.config.ts  vercel.json  vitest.config.ts
docs/: AGENT_PIPELINE.md  CI_CD.md  DATABASE.md  MOCK_DATA.md  PRD.md  RUNBOOK.md  SCORING.md  SECURITY.md  TESTING.md  TODO.md  architecture.md  requirements.md  user-stories.md
docs/ADR/: 001-monorepo-structure.md  002-database-choice.md  003-agent-framework.md  004-auth-library.md  005-data-mode-toggle.md
services/agent/: Dockerfile  config.py  main.py  models.py  pyproject.toml  render.yaml  tracing.py
services/agent/adapters/: base.py  native_adapter.py  registry.py  sap_adapter.py  veeva_vault_adapter.py
services/agent/agents/: context_synthesis.py  gap_detection.py  offer_recommendation.py  scoring_engine.py  signal_harvester.py
services/agent/configs/: pharma.yaml
services/agent/pipeline/: orchestrator.py
services/agent/providers/: base.py  factory.py  live_provider.py  mock_provider.py
services/agent/tests/: test_data_provider_factory.py  test_gap_detection.py  test_offer_recommendation.py  test_scoring_engine.py  test_signal_harvester.py  test_tracing.py
services/agent/utils/: sanitize.py
(+61 files in other folders)
